--- a/package.json
+++ b/package.json
@@ -9,16 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/parser": "^7.23.6",
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/standalone": "^7.23.6",
+    "@babel/traverse": "^7.23.6",
+    "@headlessui/react": "^1.7.17",
+    "@monaco-editor/react": "^4.6.0",
+    "@primer/octicons-react": "^19.8.0",
+    "babel-plugin-react-display-name": "^2.0.0",
+    "clipboard": "^2.0.11",
+    "firebase": "^10.7.1",
     "next": "^14.0.4",
-    "prism-react-renderer": "^2.3.0",
+    "prettier": "^3.1.1",
+    "pretty-format": "^29.7.0",
+    "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-docgen": "^7.0.1",
     "react-dom": "^18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-live": "^4.1.5",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-test-renderer": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
