--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.6.0",
     "firebase": "^10.7.1",
     "next": "14.0.4",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-live": "^4.1.5",
